Bug 1987305: Tab group labels have correct padding when tab strip is vertical and collapsed r=sthompson,desktop-theme-reviewers,tabbrowser-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D264229

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1359,11 +1359,17 @@ tab-group {
   }
 }
 
-tab-group[collapsed] .tab-group-label-hover-highlight {
-  border-radius: 2px;
+.tab-group-label-hover-highlight {
+  tab-group[collapsed] & {
+    border-radius: 2px;
 
-  #tabbrowser-tabs[orient="horizontal"] & {
-    padding-block: 4px;
+    #tabbrowser-tabs[orient="horizontal"] & {
+      padding-block: 4px;
+    }
+
+    #tabbrowser-tabs[orient="vertical"][expanded] & {
+      margin-inline-end: var(--space-medium);
+    }
   }
 
   #tabbrowser-tabs[orient="vertical"]:not([expanded]) & {
@@ -1373,32 +1379,25 @@ tab-group[collapsed] .tab-group-label-hover-highlight {
      * to stay centered in the collapsed sidebar. This helps prevent the tab
      * group label from jumping around during the sidebar collapsed-to-expanded
      * transition.
-     *
-     * This is applied to the highlight wrapper class to ensure that the
-     * highlight doesn't stretch to fill the full width of the tab strip.
      */
     margin-inline: calc(var(--tab-inner-inline-margin) + (var(--tab-collapsed-background-width) - 24px) / 2);
   }
 
-  #tabbrowser-tabs[orient="vertical"][expanded] & {
-    margin-inline-end: var(--space-medium);
-  }
-}
+  tab-group[collapsed]:not([movingtabgroup]) &:hover,
+  tab-group[previewpanelactive] & {
+    background-color: var(--tab-hover-background-color);
 
-tab-group[collapsed]:not([movingtabgroup]) .tab-group-label-hover-highlight:hover,
-tab-group[previewpanelactive] .tab-group-label-hover-highlight {
-  background-color: var(--tab-hover-background-color);
+    #tabbrowser-tabs[orient="horizontal"] & {
+      box-shadow: 0 0 0 2px var(--tab-hover-background-color);
+    }
 
-  #tabbrowser-tabs[orient="horizontal"] & {
-    box-shadow: 0 0 0 2px var(--tab-hover-background-color);
-  }
+    #tabbrowser-tabs[orient="vertical"] & {
+      box-shadow: 0 0 0 3px var(--tab-hover-background-color);
+    }
 
-  #tabbrowser-tabs[orient="vertical"] & {
-    box-shadow: 0 0 0 3px var(--tab-hover-background-color);
-  }
-
-  #tabbrowser-tabs[orient="vertical"][expanded] & {
-    box-shadow: 0 0 0 4px var(--tab-hover-background-color);
+    #tabbrowser-tabs[orient="vertical"][expanded] & {
+      box-shadow: 0 0 0 4px var(--tab-hover-background-color);
+    }
   }
 }
 
